# HW14

./: .coverage  .gitignore  main.py  pyproject.toml  readme  test.db
docs/source/: conf.py
migrations/versions/: 56a1bb2281ab_init.py  eeceaed752d1_add_field_confirmed.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: 1247  (+46 more)
postgres-data/global/: 1260  1262  2671  2672  pg_control
postgres-data/pg_stat_tmp/: global.stat
postgres-data/pg_xact/: 0000
src/: schemas.py
src/conf/: config.py  messages.py
src/repository/: users.py
src/routes/: auth.py
templates/: index.html
testing/: conftest.py
tests/: conftest.py  d_145eef247bfb46b6_schemas_py.html  d_33ea1954bbe60e2e_auth_py.html  d_33ea1954bbe60e2e_cloud_image_py.html  d_33ea1954bbe60e2e_email_py.html  d_33ea1954bbe60e2e_roles_py.html  d_67d056e3707ef46d_db_py.html  d_67d056e3707ef46d_models_py.html  d_91a712da898ee42e___init___py.html  d_91a712da898ee42e_auth_py.html  d_91a712da898ee42e_contacts_py.html  d_91a712da898ee42e_users_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_main_py.html  d_a44f0ac069e85531_test_route_auth_py.html  d_a44f0ac069e85531_test_unit_repository_contacts_py.html  d_a44f0ac069e85531_test_unit_repository_users_py.html  d_d23880557e337f5c_contacts_py.html  d_d23880557e337f5c_users_py.html  d_e8317fb604e6de26_config_py.html  d_e8317fb604e6de26_messages_py.html  index.html  main_py.html  status.json  test_route_auth-old.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
(+142 files in other folders)
